test/should_fail/DuplicateJavascriptFunction.oj

@implementation DuplicateJavascriptFunction

// Due to Objective-C naming conventions, this error should be *very* rare in
// real-life code.  Both 'doFoo:withBar:' and 'doFoo_withBar:' map to the same
// underlying JavaScript function 'doFoo_withBar_'

- (void) doFoo:(id)foo withBar:(id)bar { }
- (void) doFoo_withBar:(id)bar { }

@end
